Update mint.json and quickstart.mdx

--- a/fastapi.mdx
+++ b/fastapi.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Python FastAPI Notes'
-description: 'Notes for the Python library FastAPI'
+title: "Basics of FastAPI"
+description: "Notes for the Python library FastAPI"
 ---
 
 # Installation
@@ -8,6 +8,7 @@ description: 'Notes for the Python library FastAPI'
 ```
 pip install fastapi[all]
 ```
+
 # Hello World Example
 
 ```python
@@ -69,11 +70,11 @@ async def read_item(item_id: str, q: str | None = None):
 ## Request Body
 
 > When you need to send data from a client (let's say, a browser) to your API, you send it as a **request body**.
-> 
+>
 > A **request** body is data sent by the client to your API. A **response** body is the data your API sends to the client.
-> 
+>
 > Your API almost always has to send a **response** body. But clients don't necessarily need to send **request** bodies all the time.
-> 
+>
 > To declare a **request** body, you use [Pydantic](https://pydantic-docs.helpmanual.io/) models with all their power and benefits.
 
 ```python
@@ -95,13 +96,13 @@ async def create_item(item: Item):
 ### Results of Above Example
 
 > With just that Python type declaration, **FastAPI** will:
-> 
+>
 > - Read the body of the request as JSON.
 > - Convert the corresponding types (if needed).
 > - Validate the data.
->     - If the data is invalid, it will return a nice and clear error, indicating exactly where and what was the incorrect data.
+>   - If the data is invalid, it will return a nice and clear error, indicating exactly where and what was the incorrect data.
 > - Give you the received data in the parameter `item`.
->     - As you declared it in the function to be of type `Item`, you will also have all the editor support (completion, etc) for all of the attributes and their types.
+>   - As you declared it in the function to be of type `Item`, you will also have all the editor support (completion, etc) for all of the attributes and their types.
 > - Generate [JSON Schema](https://json-schema.org/) definitions for your model, you can also use them anywhere else you like if it makes sense for your project.
 > - Those schemas will be part of the generated OpenAPI schema, and used by the automatic documentation UIs.
 
@@ -150,13 +151,13 @@ q: str | None = Query(default=None)
 ### Advantages of `Annotated`
 
 > **Using `Annotated` is recommended** instead of the default value in function parameters, it is **better** for multiple reasons. 🤓
-> 
+>
 > The **default** value of the **function parameter** is the **actual default** value, that's more intuitive with Python in general. 😌
-> 
+>
 > You could **call** that same function in **other places** without FastAPI, and it would **work as expected**. If there's a **required** parameter (without a default value), your **editor** will let you know with an error, **Python** will also complain if you run it without passing the required parameter.
-> 
+>
 > When you don't use `Annotated` and instead use the **(old) default value style**, if you call that function without FastAPI in **other place**, you have to **remember** to pass the arguments to the function for it to work correctly, otherwise the values will be different from what you expect (e.g. `QueryInfo` or something similar instead of `str`). And your editor won't complain, and Python won't complain running that function, only when the operations inside error out.
-> 
+>
 > Because `Annotated` can have more than one metadata annotation, you could now even use the same function with other tools, like [Typer](https://typer.tiangolo.com/). 🚀
 
 ## Path Parameters and Numeric Validation
@@ -181,9 +182,9 @@ async def read_items(
 ## `Body`
 
 > The same way there is a `Query` and `Path` to define extra data for query and path parameters, **FastAPI** provides an equivalent `Body`.
-> 
+>
 > For example, extending the previous model, you could decide that you want to have another key `importance` in the same body, besides the `item` and `user`.
-> 
+>
 > If you declare it as is, because it is a singular value, **FastAPI** will assume that it is a query parameter.
 
 ## `Cookie` & `Header`
@@ -201,7 +202,7 @@ async def read_items(ads_id: Annotated[str | None, Cookie()] = None):
 ```
 
 > `Cookie` is a "sister" class of `Path` and `Query`. It also inherits from the same common `Param` class.
-> 
+>
 > But remember that when you import `Query`, `Path`, `Cookie` and others from `fastapi`, those are actually functions that return special classes.
 
 > To declare cookies, you need to use `Cookie`, because otherwise the parameters would be interpreted as query parameters.
@@ -232,10 +233,11 @@ def create_cookie():
 ```
 
 > Keep in mind that if you return a response directly instead of using the `Response` parameter, FastAPI will return it directly.
-> 
+>
 > So, you will have to make sure your data is of the correct type. E.g. it is compatible with JSON, if you are returning a `JSONResponse`.
-> 
+>
 > And also that you are not sending any data that should have been filtered by a `response_model`.
+
 ### Setting Headers
 
 ```python
@@ -259,8 +261,8 @@ def get_headers():
 
 ## Response Model - Return Type
 
-> You can declare the type used for the response by annotating the _path operation function_ **return type**.
-> 
+> You can declare the type used for the response by annotating the *path operation function* **return type**.
+>
 > You can use **type annotations** the same way you would for input data in function **parameters**, you can use Pydantic models, lists, dictionaries, scalar values like integers, booleans, etc.
 
 ```python
@@ -298,9 +300,9 @@ async def login(username: Annotated[str, Form()], password: Annotated[str, Form(
 ### JSON Compatible Encoder
 
 > There are some cases where you might need to convert a data type (like a Pydantic model) to something compatible with JSON (like a `dict`, `list`, etc).
-> 
+>
 > For example, if you need to store it in a database.
-> 
+>
 > For that, **FastAPI** provides a `jsonable_encoder()` function.
 
 ```python
@@ -330,17 +332,17 @@ def update_item(id: str, item: Item):
 
 ## What is "Dependency Injection"
 
-> **"Dependency Injection"** means, in programming, that there is a way for your code (in this case, your _path operation functions_) to declare things that it requires to work and use: "dependencies".
-> 
+> **"Dependency Injection"** means, in programming, that there is a way for your code (in this case, your *path operation functions*) to declare things that it requires to work and use: "dependencies".
+>
 > And then, that system (in this case **FastAPI**) will take care of doing whatever is needed to provide your code with those needed dependencies ("inject" the dependencies).
-> 
+>
 > This is very useful when you need to:
-> 
+>
 > - Have shared logic (the same code logic again and again).
 > - Share database connections.
 > - Enforce security, authentication, role requirements, etc.
 > - And many other things...
-> 
+>
 > All these, while minimizing code repetition.
 
 ## Creating a Dependency
@@ -360,6 +362,7 @@ async def read_items(commons: Annotated[dict, Depends(my_dependency)]):
 ```
 
 ## Callable Dependencies
+
 ### Old Way (Non-Parameterized Class)
 
 ```python
@@ -410,11 +413,11 @@ async def main(
 	return myCallableDep.q # Defined
 ```
 
-> In this case, this `__call__` is what **FastAPI** will use to check for additional parameters and sub-dependencies, and this is what will be called to pass a value to the parameter in your _path operation function_ later.
+> In this case, this `__call__` is what **FastAPI** will use to check for additional parameters and sub-dependencies, and this is what will be called to pass a value to the parameter in your *path operation function* later.
 
 ## Dependencies in Path Operation Definition
 
-> The _path operation decorator_ receives an optional argument `dependencies`.
+> The *path operation decorator* receives an optional argument `dependencies`.
 > It should be a `list` of `Depends()`:
 
 ```python
@@ -425,8 +428,9 @@ dependencies: list[Depends] = [
 @app.get("/", dependencies=dependencies)
 ```
 
-> These dependencies will be executed/solved the same way as normal dependencies. ==But their value (if they return any) won't be passed to your _path operation function_.==
-# File Structure / Multiple Files [¶](https://fastapi.tiangolo.com/tutorial/bigger-applications/) 
+> These dependencies will be executed/solved the same way as normal dependencies. ==But their value (if they return any) won't be passed to your *path operation function*.==
+
+# File Structure / Multiple Files [¶](https://fastapi.tiangolo.com/tutorial/bigger-applications/)
 
 ![structure](https://fastapi.tiangolo.com/img/tutorial/bigger-applications/package.svg)
 
@@ -447,12 +451,12 @@ dependencies: list[Depends] = [
 ## `APIRouter`
 
 > Let's say the file dedicated to handling just users is the submodule at `/app/routers/users.py`.
-> 
-> You want to have the _path operations_ related to your users separated from the rest of the code, to keep it organized.
-> 
+>
+> You want to have the *path operations* related to your users separated from the rest of the code, to keep it organized.
+>
 > But it's still part of the same **FastAPI** application/web API (it's part of the same "Python Package").
-> 
-> You can create the _path operations_ for that module using `APIRouter`.
+>
+> You can create the *path operations* for that module using `APIRouter`.
 
 ```python
 from fastapi import APIRouter
@@ -475,24 +479,24 @@ async def read_user(username: str):
 ### Another Module with `APIRouter`
 
 > Let's say you also have the endpoints dedicated to handling "items" from your application in the module at `app/routers/items.py`.
-> 
-> You have _path operations_ for:
-> 
+>
+> You have *path operations* for:
+>
 > - `/items/`
 > - `/items/{item_id}`
-> 
+>
 > It's all the same structure as with `app/routers/users.py`.
-> 
+>
 > But we want to be smarter and simplify the code a bit.
-> 
-> We know all the _path operations_ in this module have the same:
-> 
+>
+> We know all the *path operations* in this module have the same:
+>
 > - Path `prefix`: `/items`.
 > - `tags`: (just one tag: `items`).
 > - Extra `responses`.
 > - `dependencies`: they all need that `X-Token` dependency we created.
-> 
-> So, instead of adding all that to each _path operation_, we can add it to the `APIRouter`.
+>
+> So, instead of adding all that to each *path operation*, we can add it to the `APIRouter`.
 
 ```python
 from fastapi import APIRouter, Depends, HTTPException
@@ -570,24 +574,24 @@ templates = Jinja2Templates(directory="./templates")
 
 @app.get("/")
 async def main(req: Request): # Grab the Request
-	return templates.TemplateResponse(request=req, name="index.html", 
+	return templates.TemplateResponse(request=req, name="index.html",
 		context={"name": "Josh"})
 ```
 
 ### `url_for`
 
-> You can also use `url_for()` inside of the template, it takes as arguments the same arguments that would be used by your _path operation function_.
-> 
+> You can also use `url_for()` inside of the template, it takes as arguments the same arguments that would be used by your *path operation function*.
+>
 > So, the section with:
-> 
+>
 > `<a href="{{ url_for('read_item', id=id) }}">`
-> 
-> ...will generate a link to the same URL that would be handled by the _path operation function_ `read_item(id=id)`.
-> 
+>
+> ...will generate a link to the same URL that would be handled by the *path operation function* `read_item(id=id)`.
+>
 > For example, with an ID of `42`, this would render:
-> 
+>
 > Copy to clipboard
-> 
+>
 > `<a href="/items/42">`
 
 By using `url_for()` you can access static files:
@@ -614,42 +618,42 @@ app.mount("/static", StaticFiles(directory="static"), name="static")
 ```
 
 > The first `"/static"` refers to the sub-path this "sub-application" will be "mounted" on. So, any path that starts with `"/static"` will be handled by it.
-> 
+>
 > The `directory="static"` refers to the name of the directory that contains your static files.
-> 
+>
 > The `name="static"` gives it a name that can be used internally by **FastAPI**.
-> 
+>
 > All these parameters can be different than "`static`", adjust them with the needs and specific details of your own application.
 
 ## Mounting
 
 > "Mounting" means adding a complete "independent" application in a specific path, that then takes care of handling all the sub-paths.
-> 
+>
 > This is different from using an `APIRouter` as a mounted application is completely independent. The OpenAPI and docs from your main application won't include anything from the mounted application, etc.
-> 
+>
 > You can read more about this in the [Advanced User Guide](https://fastapi.tiangolo.com/advanced/).
-
 
 # Background Tasks
 
-> You can define background tasks to be run _after_ returning a response.
-> 
+> You can define background tasks to be run *after* returning a response.
+>
 > This is useful for operations that need to happen after a request, but that the client doesn't really have to be waiting for the operation to complete before receiving the response.
-> 
+>
 > This includes, for example:
+>
 > - Email notifications sent after performing an action:
->     - As connecting to an email server and sending an email tends to be "slow" (several seconds), you can return the response right away and send the email notification in the background.
+>   - As connecting to an email server and sending an email tends to be "slow" (several seconds), you can return the response right away and send the email notification in the background.
 > - Processing data:
->     - For example, let's say you receive a file that must go through a slow process, you can return a response of "Accepted" (HTTP 202) and process it in the background.
+>   - For example, let's say you receive a file that must go through a slow process, you can return a response of "Accepted" (HTTP 202) and process it in the background.
 
 ## Using `BackgroundTasks`
 
 ### Task Functions
 
 > Create a function to be run as the background task.
-> 
+>
 > It is just a standard function that can receive parameters.
-> 
+>
 > It can be an `async def` or normal `def` function, **FastAPI** will know how to handle it correctly.
 
 ```python
@@ -671,7 +675,7 @@ async def send_notif(email: str, tasks: BackgroundTasks):
 ### `.add_task()`
 
 > `.add_task()` receives as arguments:
-> 
+>
 > - A task function to be run in the background (`write_notification`).
 > - Any sequence of arguments that should be passed to the task function in order (`email`).
 > - Any keyword arguments that should be passed to the task function (`message="some notification"`).
@@ -682,8 +686,7 @@ async def send_notif(email: str, tasks: BackgroundTasks):
 
 ## Using `TestClient`
 
-> Requires installation of `httpx`
-> `pip install httpx`
+> Requires installation of `httpx` > `pip install httpx`
 
 1. Import `TestClient`
 2. Create `TestClient` instance by passing the `FastAPI` app in
@@ -710,9 +713,9 @@ def test_read_main():
 ```
 
 > Notice that the testing functions are normal `def`, not `async def`.
-> 
+>
 > And the calls to the client are also normal calls, not using `await`.
-> 
+>
 > This allows you to use `pytest` directly without complications.
 
 ## Async Tests [¶](https://fastapi.tiangolo.com/advanced/async-tests/#async-tests)
@@ -720,9 +723,9 @@ def test_read_main():
 ### Using `HTTPX`
 
 > Even if your **FastAPI** application uses normal `def` functions instead of `async def`, it is still an `async` application underneath.
-> 
+>
 > The `TestClient` does some magic inside to call the asynchronous FastAPI application in your normal `def` test functions, using standard pytest. But that magic doesn't work anymore when we're using it inside asynchronous functions. By running our tests asynchronously, we can no longer use the `TestClient` inside our test functions.
-> 
+>
 > The `TestClient` is based on [HTTPX](https://www.python-httpx.org/), and luckily, we can use it directly to test the API.
 
 ```python
@@ -745,18 +748,18 @@ async def test_root():
 
 # Callbacks
 
-> The process that happens when your API app calls the _external API_ is named a "callback". Because the software that the external developer wrote sends a request to your API and then your API _calls back_, sending a request to an _external API_ (that was probably created by the same developer).
-> 
-> In this case, you could want to document how that external API _should_ look like. What _path operation_ it should have, what body it should expect, what response it should return, etc.
+> The process that happens when your API app calls the *external API* is named a "callback". Because the software that the external developer wrote sends a request to your API and then your API *calls back*, sending a request to an *external API* (that was probably created by the same developer).
+>
+> In this case, you could want to document how that external API *should* look like. What *path operation* it should have, what body it should expect, what response it should return, etc.
 
-There are 2 main differences from a normal _path operation_:
+There are 2 main differences from a normal *path operation*:
 
-- It doesn't need to have any actual code, because your app will never call this code. It's only used to document the _external API_. So, the function could just have `pass`.
-- The _path_ can contain an [OpenAPI 3 expression](https://github.com/OAI/OpenAPI-Specification/blob/master/versions/3.1.0.md#key-expression) (see more below) where it can use variables with parameters and parts of the original request sent to _your API_.
+- It doesn't need to have any actual code, because your app will never call this code. It's only used to document the *external API*. So, the function could just have `pass`.
+- The *path* can contain an [OpenAPI 3 expression](https://github.com/OAI/OpenAPI-Specification/blob/master/versions/3.1.0.md#key-expression) (see more below) where it can use variables with parameters and parts of the original request sent to *your API*.
 
 ## Callback Path Expression
 
-> The callback _path_ can have an [OpenAPI 3 expression](https://github.com/OAI/OpenAPI-Specification/blob/master/versions/3.1.0.md#key-expression) that can contain parts of the original request sent to _your API_.
+> The callback *path* can have an [OpenAPI 3 expression](https://github.com/OAI/OpenAPI-Specification/blob/master/versions/3.1.0.md#key-expression) that can contain parts of the original request sent to *your API*.
 
 ```python
 "{$callback_url}/invoices/{$request.body.id}"
@@ -796,7 +799,7 @@ def invoice_notification(body: InvoiceEvent):
 
 @app.post("/invoices/", callbacks=invoices_callback_router.routes)
 def create_invoice(invoice: Invoice, callback_url: Union[HttpUrl, None] = None):
-    
+
     # Send the invoice, collect the money, send the notification (the callback)
     return {"msg": "Invoice received"}
 
@@ -805,31 +808,43 @@ def create_invoice(invoice: Invoice, callback_url: Union[HttpUrl, None] = None):
 # Middleware
 
 > Work in Progress
+
 ## CORS
 
 > Work in Progress
+
 # SQL / Databases
 
 > Work in Progress
+
 # WebSockets [¶](https://fastapi.tiangolo.com/advanced/websockets/)
 
 > Work in Progress
+
 # Available Response Types [¶](https://fastapi.tiangolo.com/advanced/custom-response/)
 
 ##### `Response`
+
 ##### `HTMLResponse`
+
 ##### `PlainTextResponse`
+
 ##### `JSONResponse`
+
 ##### `ORJSONResponse`
+
 ##### `UJSONResponse`
+
 ##### `RedirectResponse`
+
 ##### `StreamingResponse`
+
 ##### `FileResponse`
 
 # Available Middleware [¶](https://fastapi.tiangolo.com/advanced/middleware/#advanced-middleware)
 
 ##### `HTTPSRedirectMiddleware`
+
 ##### `TrustedHostMiddleware`
+
 ##### `GZipMiddleware`
-
-
