Update FastAPI installation command and fix typo in Strawberry Guide

--- a/fastapi.mdx
+++ b/fastapi.mdx
@@ -5,13 +5,11 @@ description: "Notes for the Python library FastAPI"
 
 # Installation
 
-```
-pip install fastapi[all]
-```
+<CodeGroup>```bash pip pip install fastapi[all] ```</CodeGroup>
 
 # Hello World Example
 
-```python
+```python app.py
 from fastapi import FastAPI
 
 app = FastAPI()
