--- a/introduction.mdx
+++ b/introduction.mdx
@@ -21,12 +21,12 @@ An easy to use GraphQL API for Alpha Vantage stock APIs.
 		We've provided an extensive guide and set of notes for FastAPI usage.
 	</Card>
 	<Card
-		title="🍓 Strawberry Guide"
+		title="Strawberry Guide"
 		icon="strawberry"
 		href="https://alphavantagegql.officialurban.xyz/strawberry"
 	>
-		The GraphQL API is powered by [🍓 Strawberry](https://strawberry.rocks/)
-		we've provided some basic notes on its usage.
+		The GraphQL API is powered by Strawberry so we've provided some basic notes
+		on its usage.
 	</Card>
 	<Card
 		title="GraphQL Schema Reference"
