--- a/schema.mdx
+++ b/schema.mdx
@@ -3,11 +3,9 @@ title: AlphaVantage GraphQL Schema
 description: The full schema for refrence
 ---
 
-# AlphaVantage GraphQL Schema
+<Tip>We have provided the full schema definition for reference:</Tip>
 
-We have provided the full schema definition for reference:
-
-```graphql
+```graphql schema.graphql
 type BalanceSheetType {
 	fiscalDateEnding: String!
 	reportedCurrency: String!
