--- a/test.mdx
+++ b/test.mdx
@@ -1,11 +1,20 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "New file"
+description: "Description of your new file."
 ---
 
-# Hello World
+<ParamField query="filter" type="string" default="none" required>
+  The filtering command used to sort through the users
+</ParamField>
+<ResponseField name="user" type="User Object">
+  <Expandable title="properties">
+    <ResponseField name="full_name" type="string">
+      The full name of the user
+    </ResponseField>
 
-```python
-def fn():
-    pass
-```
+    <ResponseField name="is_over_21" type="boolean">
+      Whether the user is over 21 years old
+    </ResponseField>
+
+  </Expandable>
+</ResponseField>
