Update FastAPI installation code and fix links in introduction

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -9,21 +9,26 @@ An easy to use GraphQL API for Alpha Vantage stock APIs.
 	<Card
 		title="Quickstart & Installation"
 		icon="arrow-right"
-		href="https://alphavantagegql.officialurban.xyz/quickstart"
+		iconType="duotone"
+		href="./quickstart"
 	>
 		Get started with using the API and learn how to use it!
 	</Card>
 	<Card
 		title="FastAPI Guide"
 		icon="browser"
-		href="https://alphavantagegql.officialurban.xyz/fastapi"
+		iconType="duotone"
+		color="steelblue"
+		href="./fastapi"
 	>
 		We've provided an extensive guide and set of notes for FastAPI usage.
 	</Card>
 	<Card
 		title="Strawberry Guide"
 		icon="strawberry"
-		href="https://alphavantagegql.officialurban.xyz/strawberry"
+		iconType="duotone"
+		color="red"
+		href="./strawberry"
 	>
 		The GraphQL API is powered by Strawberry so we've provided some basic notes
 		on its usage.
@@ -31,8 +36,10 @@ An easy to use GraphQL API for Alpha Vantage stock APIs.
 	<Card
 		title="GraphQL Schema Reference"
 		icon="database"
-		href="https://alphavantagegql.officialurban.xyz/schema"
+		iconType="duotone"
+		color="fuchsia"
+		href="./schema/main"
 	>
-		Reference the full GraphQL Schema
+		In depth reference the full GraphQL Schema
 	</Card>
 </CardGroup>
