--- a/strawberry.mdx
+++ b/strawberry.mdx
@@ -13,8 +13,9 @@ description: Learn the basics of 🍓 Strawberry, a GraphQL library for Python.
 
 # Installation
 
-```
+```bash pip
 pip install strawberry-graphql[fastapi]
+
 ```
 
 ```python
