--- a/fastapi.mdx
+++ b/fastapi.mdx
@@ -5,7 +5,12 @@ description: "Notes for the Python library FastAPI"
 
 # Installation
 
-<CodeGroup>```bash pip pip install fastapi[all] ```</CodeGroup>
+<CodeGroup>
+```bash pip
+pip install fastapi[all]
+
+````
+</CodeGroup>
 
 # Hello World Example
 
@@ -17,7 +22,7 @@ app = FastAPI()
 @app.get("/")
 async def root():
 	return {"message": "Hello World"}
-```
+````
 
 # Requests & Routing
 
