--- a/schema/main.mdx
+++ b/schema/main.mdx
@@ -42,4 +42,22 @@ description: "View in depth information for each function and data type in the G
 	>
 		Technical indicators for stocks.
 	</Card>
+	<Card
+		title="Global Commodities"
+		icon="corn"
+		iconType="duotone"
+		color="yellow"
+		href="./commodities"
+	>
+		Information on global commodites such as: corn, sugar, and oil.
+	</Card>
+	<Card
+		title="Economic Indicators"
+		icon="building-columns"
+		iconType="duotone"
+		color="blue"
+		href="./economy"
+	>
+		Information on economic indicators such as GDP and treasury yields.
+	</Card>
 </CardGroup>
